# edp-rs

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  erlpack-interop.yaml
crates/edp_client/: CHANGELOG.md  Cargo.toml  README.md
crates/edp_client/src/: connection.rs  control.rs  digest.rs  epmd_client.rs  errors.rs  flags.rs  fragmentation.rs  framing.rs  handshake.rs  lib.rs  pid_allocator.rs  state_machine.rs  term_helpers.rs  transport.rs  types.rs
crates/edp_client/tests/: connection_tests.rs  control_message_api_tests.rs  control_message_codec_tests.rs  digest_tests.rs  edge_case_tests.rs  epmd_client_tests.rs  epmd_integration_tests.rs  error_enum_tests.rs  error_tests.rs  flags_tests.rs  fragment_corruption_tests.rs  fragmentation_tests.rs  framing_tests.rs  handshake_tests.rs  integration_handshake_tests.rs  pid_allocator_tests.rs  property_tests.rs  term_helpers_tests.rs  test_control_message_builders.rs  test_erlang_node.rs
crates/edp_elixir_terms/: Cargo.toml  README.md
crates/edp_elixir_terms/src/: builders.rs  date_time.rs  exceptions.rs  gen_server_terms.rs  lib.rs  map_set.rs  range.rs
crates/edp_elixir_terms/tests/: elixir_types_tests.rs
crates/edp_examples/: Cargo.toml  README.md
crates/edp_examples/src/: examplectl.rs  examples_diagnostics.rs  send_direct_message.rs
crates/edp_examples/tests/: test_helpers.rs
crates/edp_examples_elixir/: Cargo.toml
crates/edp_examples_elixir/elixir/: echo_server.exs
crates/edp_examples_elixir/src/: elixir_echo.rs
crates/edp_examples_elixir/tests/: test_elixir_interop.rs
crates/edp_examples_elixir/tests/elixir/: echo_server.exs
crates/edp_node/: CHANGELOG.md  Cargo.toml  README.md
crates/edp_node/src/: errors.rs  gen_event.rs  gen_server.rs  lib.rs  mailbox.rs  node.rs  process.rs  registry.rs
crates/edp_node/tests/: gen_event_tests.rs  gen_server_tests.rs  link_monitor_tests.rs  message_passing_tests.rs  node_tests.rs  rpc_tests.rs
crates/erltf/: CHANGELOG.md  Cargo.toml  README.md
crates/erltf/benches/: decoding.rs  encoding.rs
crates/erltf/src/: borrowed.rs  decoder.rs  encoder.rs  errors.rs  lib.rs  tags.rs  term.rs  types.rs
crates/erltf/tests/: api_tests.rs  atom_cache_lru_tests.rs  borrowed_ordering_tests.rs  borrowed_tests.rs  codec_tests.rs  compatibility_tests.rs  ordering_tests.rs  property_tests.rs  proplist_conversion_tests.rs  term_helpers_tests.rs  type_specific_tests.rs
crates/erltf_serde/: CHANGELOG.md  Cargo.toml  README.md
crates/erltf_serde/src/: de.rs  elixir.rs  error.rs  lib.rs  ser.rs
crates/erltf_serde/tests/: bigint_tests.rs  elixir_interop_property_tests.rs  elixir_interop_tests.rs  elixir_struct_tests.rs  owned_term_deserialize_property_tests.rs  owned_term_deserialize_tests.rs  proplist_tests.rs  rabbitmq_types_tests.rs  serde_tests.rs
crates/erltf_serde_derive/: Cargo.toml
crates/erltf_serde_derive/src/: lib.rs
crates/examples/: Cargo.toml  README.md
crates/examples/src/: examplectl.rs  examples_diagnostics.rs
crates/interop_with_erlpack_python/: Cargo.toml  pyproject.toml
crates/interop_with_erlpack_python/python/: decode_from_rust.py  encode_for_rust.py
crates/interop_with_erlpack_python/src/: encode_for_py.rs
crates/interop_with_erlpack_python/tests/: test_etf_roundtrip.rs
crates/interop_with_erlpack_typescript/: Cargo.toml  package-lock.json  package.json  tsconfig.json
crates/interop_with_erlpack_typescript/src/: decode_from_ts.rs  encode_for_ts.rs
crates/interop_with_erlpack_typescript/tests/: test_etf_roundtrip.rs
crates/interop_with_erlpack_typescript/typescript/: decode_from_rust.ts  encode_for_rust.ts
