[package]
name = "edp_node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-level Erlang Distribution Protocol node implementation"
keywords = ["erlang", "distribution", "node", "actor", "otp"]
categories = ["network-programming", "asynchronous"]

[dependencies]
erltf = { version = "0.5.0", path = "../erltf" }
erltf_serde = { version = "0.5.0", path = "../erltf_serde" }
edp_client = { version = "0.5.0", path = "../edp_client" }

tokio = { workspace = true, default-features = false, features = ["net", "io-util", "time", "sync", "macros", "rt"] }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["rt", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
