[package]
name = "interop_with_erlpack_python"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "encode_for_python"
path = "src/encode_for_py.rs"

[[bin]]
name = "decode_from_python"
path = "src/decode_from_py.rs"

[dependencies]
erltf = { path = "../erltf" }
anyhow = { workspace = true }
